// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`arrow-function.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
@let fn = (a, b) =>   componentValue + a + b;
One: {{fn(0, 1)}}

@if (true) {
  Two: {{fn(1, 1)}}

  <button (click)="   componentValue = fn(2, 1)"></button>
  <button (click)="   componentValue => fn(2, 1)"></button>
}


{{[(a) =>    a +    1][0](1000)}}
{{[(a   ) => a + 1 +   componentProp][0](1000)}}


@let a = 1;

@if (true) {
  @let b = 2;

  @if (true) {
    @let c = 3;
    {{(() =>    a + b + c)()}}
  }
}

=====================================output=====================================
@let fn = (a, b) => componentValue + a + b; One: {{ fn(0, 1) }}

@if (true) {
  Two: {{ fn(1, 1) }}

  <button (click)="componentValue = fn(2, 1)"></button>
  <button (click)="(componentValue) => fn(2, 1)"></button>
}

{{ [(a) => a + 1][0](1000) }}
{{ [(a) => a + 1 + componentProp][0](1000) }}

@let a = 1;

@if (true) {
  @let b = 2;

  @if (true) {
    @let c = 3;
    {{ (() => a + b + c)() }}
  }
}

================================================================================
`;

exports[`exponentiation-operators.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{
  (a)   ** b
}}

=====================================output=====================================
{{ a ** b }}

================================================================================
`;

exports[`in-operators.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{

  ( (a in  (b)))
}}

=====================================output=====================================
{{ a in b }}

================================================================================
`;

exports[`instanceof-operator.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
{{

  ( (a instanceof  (b)))
}}

=====================================output=====================================
{{ a instanceof b }}

================================================================================
`;

exports[`spread-element.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{
  [...   a]
}}

<div [a]="{foo:1, ...bar   }"></div>
<div [a]="{
foo:1, ...bar   }"></div>

{{ foo(a,
...b)}}

=====================================output=====================================
{{ [...a] }}

<div [a]="{ foo: 1, ...bar }"></div>
<div
  [a]="{
    foo: 1,
    ...bar,
  }"
></div>

{{ foo(a, ...b) }}

================================================================================
`;

exports[`tagged-template-literal.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{

  (  (tag \` a \${ b } \\\\u0063 \`))
}}

=====================================output=====================================
{{ tag\` a \${b} \\\\u0063 \` }}

================================================================================
`;

exports[`template-literal.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{

  (  (\` a \${ b } \\\\u0063 \`))
}}

=====================================output=====================================
{{ \` a \${b} \\\\u0063 \` }}

================================================================================
`;

exports[`void-operators.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{

  void   (1 +2)
}}

=====================================output=====================================
{{ void (1 + 2) }}

================================================================================
`;
